--- a/src/pages/eliminar-datos.astro
+++ b/src/pages/eliminar-datos.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
 
-const contactEmail = 'administracion@ministeriomana.org';
+const contactEmail = 'info@ministeriomana.org';
 const lastUpdated = '4 de febrero de 2026';
 ---
 
