--- a/src/pages/privacidad.astro
+++ b/src/pages/privacidad.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '@layouts/BaseLayout.astro';
 
 const lastUpdated = '4 de febrero de 2026';
-const contactEmail = 'administracion@ministeriomana.org';
+const contactEmail = 'info@ministeriomana.org';
 const siteUrl = 'https://ministeriomana.org';
 ---
 
