Fix portal chips and registro module loading

--- a/src/components/cumbre2026/CumbreLayout.astro
+++ b/src/components/cumbre2026/CumbreLayout.astro
@@ -79,6 +79,4 @@ const cspNonce = Astro.locals?.cspNonce;
   </div>
 </BaseLayout>
 
-<script type="module" nonce={cspNonce}>
-  import '@scripts/cumbre-nav.js';
-</script>
+<script type="module" src={Astro.resolve('../../scripts/cumbre-nav.js')} nonce={cspNonce}></script>
